parser/src/lexer/snapshots/parser__lexer__lexer__tests__f-string-literals-6.snap
---
source: parser/src/lexer/lexer.rs
description: "f'''hello'''"
---
[
    Token {
        kind: FStringStart,
        value: Str(
            "f'''",
        ),
        start: 0,
        end: 4,
    },
    Token {
        kind: FStringMiddle,
        value: Str(
            "hello",
        ),
        start: 4,
        end: 9,
    },
    Token {
        kind: FStringEnd,
        value: Str(
            "'''",
        ),
        start: 9,
        end: 12,
    },
]
