parser/src/lexer/snapshots/parser__lexer__lexer__tests__f-string-literals-7.snap
---
source: parser/src/lexer/lexer.rs
description: "f\"{{hey}}\""
---
[
    Token {
        kind: FStringStart,
        value: Str(
            "f\"",
        ),
        start: 0,
        end: 2,
    },
    Token {
        kind: FStringMiddle,
        value: Str(
            "{{hey}}",
        ),
        start: 2,
        end: 9,
    },
    Token {
        kind: FStringEnd,
        value: Str(
            "\"",
        ),
        start: 9,
        end: 10,
    },
]
