parser/src/lexer/snapshots/parser__lexer__lexer__tests__identifiers-3.snap
---
source: parser/src/lexer/lexer.rs
description: a_
---
[
    Token {
        kind: Identifier,
        value: Str(
            "a_",
        ),
        start: 0,
        end: 2,
    },
]
