parser/src/lexer/snapshots/parser__lexer__lexer__tests__identifiers-6.snap
---
source: parser/src/lexer/lexer.rs
description: ಠ_ಠ
---
[
    Token {
        kind: Identifier,
        value: Str(
            "ಠ_ಠ",
        ),
        start: 0,
        end: 7,
    },
]
